# prk-mcp-ai-recommender-v1

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: helper_mock.py  helper_no_mock.py  jobs_api.py
