[project]
name = "prk-mcp-ai-recommender-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=2.3.0",
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "pymupdf>=1.26.6",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
